--- a/stylesheet.css
+++ b/stylesheet.css
@@ -9,6 +9,7 @@ html, body {
     text-align: left;
     background-color: white;
     color: black;
+    scroll-behavior:smooth;
 }
 .flex-container {
     display: flex;
@@ -31,12 +32,13 @@ html, body {
     margin: 0 auto; 
     padding: 0;
     width: 400px;
-    display: flex; 
+    display: flex;
+    
     }
 }
 
 .nav ul li {  
-    transition: background .5s; 
+    transition: background .5s;
 }
 
 .nav ul li:hover {
@@ -46,13 +48,15 @@ html, body {
 }
 
 .nav ul li a {
-    color: black;
+    color: white;
     text-decoration: none;
     font-size: 1.5em;
+    scroll-behavior: smooth;
+    
 }
 
 .title {
-    background-image: url("./golden\ gate\ bridge.jpg" );
+    background-image: url("golden\ gate\ bridge\ night.jpg" );
     background-size: cover;
     height: 100vh;
     width: 100%;
@@ -66,7 +70,7 @@ html, body {
     transform: translate(-50%, -50%);
     text-align: center;
     font-size: 3em;
-    color: rgb(0, 0, 0);
+    color: white;
 }
 
 .social {
@@ -81,7 +85,7 @@ html, body {
     gap: 30px;
 }
 .icons li a {
-    color: black;
+    color: white;
 }
 li a:hover {
     color:rgb(181, 173, 173);
@@ -93,7 +97,9 @@ li a:hover {
     padding-bottom: 100px;
     display: block;
     margin: 0 auto;
-    width: 50%;
+    /*width: 70%; */
+    background-color: #ebeeee;
+    font-size: 1.6em;
 }
 .prof-pic {
     display: inline-block;
@@ -101,12 +107,19 @@ li a:hover {
     height: 200px;
     border-radius: 50%;
     object-fit: cover;
-    object-position: 0px, 100px;
     padding-bottom: 20px;
+    float: left;
 }
 .about-me p {
-    display: inline-block;
     width: 700px;
+    display: inline-block;
+    text-align: justify;
+}
+.about-me h3,h1 {
+    text-align: center;
+}
+.about-me h1 {
+    text-align: center;
 }
 .footer-nav {
     display: flex;
@@ -119,4 +132,33 @@ li a:hover {
     color: black;
     font-size: 1.6em;
 }
+.projects {
+    display: flex;
+    flex-wrap: wrap;
+    background-color: blue;
+}
+.projects ul {
+    padding-top: 2em;
+    padding-bottom: 3em;
+}
+.projects ul li {
+    height: 400px;
+    width: 700px;
+    list-style-type: none;
+    display: flex;
+
+}#project1 {
+    background-image: url("berkeleyhaas.jpg" );
+    background-size: cover;
+}
+#project2 {
+    background-image: url("pwc.jpg" );
+    background-size: cover;
+}
+#project3 {
+    background-image: url("uiux.jpg" );
+    background-size: cover;
+}
+
+
 
