--- a/stylesheet.css
+++ b/stylesheet.css
@@ -131,7 +131,7 @@ li a:hover {
     font-size: 1.6em;
 }
 .projects {
-    background-color: blue;
+    /* background-color: blue; */
 
 }
 .projects h1 {
@@ -141,7 +141,7 @@ li a:hover {
 .container {
     display: flex;
     width: 60%;
-    background-color: green;
+    /* background-color: green; */
     flex-wrap: wrap;
     justify-content: space-evenly;
     flex-direction: row;
@@ -154,6 +154,10 @@ li a:hover {
     background-size: 100% 100%;
     background-position: center;
     
+}
+.container div:hover {
+    color: black;
+    opacity: .5;
 }
 
 #project1 {
