--- a/stylesheet.css
+++ b/stylesheet.css
@@ -93,7 +93,7 @@ li a:hover {
 }
 
 .about-me {
-    padding-top: 50px;
+    padding-top: 60px;
     padding-bottom: 100px;
     display: flex;
     margin: 0 auto;
@@ -133,13 +133,9 @@ li a:hover {
     color: black;
     font-size: 1.6em;
 }
-.projects {
-    /* background-color: blue; */
-
-}
 .projects h3 {
-    font-size: 1.6em;
-    padding-top: 70px;
+    font-size: 2em;
+    padding-top: 60px;
     text-align: center;
 }
 .projects h1 {
@@ -194,5 +190,21 @@ li a:hover {
     background-image: url("apple.jpg" );
 }
 
+.contact {
+    background-color: #c5ded7;
+    color: #727878;
+}
+
+.footer-nav {
+    display: flex;
+    width: 60%;
+    height: 100px;
+    flex-grow:1;
+}
+.contact h3 {
+    padding-top: 60px;
+    font-size: 2em;
+    text-align: center;
+}
 
 
