--- a/stylesheet.css
+++ b/stylesheet.css
@@ -33,11 +33,9 @@ html, body {
     list-style: none;
     margin: 0 auto; 
     padding: 0;
-    width: 400px;
     display: flex;
     gap: 10px;
     
-    }
 }
 
 .nav ul li {  
@@ -111,8 +109,8 @@ li a:hover {
     height: 200px;
     border-radius: 50%;
     object-fit: cover;
-    padding-bottom: 20px;
-    padding-right: 30px;
+    margin-bottom: 20px;
+    margin-right: 30px;
     float: left;
 }
 .about-me p {
